Update README + fix light/dark mode toggle across searchbar feature and toggle buttons

--- a/src/App.css
+++ b/src/App.css
@@ -67,13 +67,3 @@ a {
     text-align: center;
     color: #000000;
 }
-
-/* Toggle Buttons */
-.toggle-buttons {
-    border-radius: 50%;
-    background-color: #EFB978;
-    height: 43px;
-    width: 43px;
-    cursor: pointer;
-    border: none;
-}
